--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,6 +41,7 @@ html {
 body {
   margin: 0; /* 1 */
   line-height: inherit; /* 2 */
+  background-color: #021f00;
 }
 
 /*
@@ -185,7 +186,7 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
- 
+
   background-color: transparent; /* 2 */
   background-image: none; /* 2 */
 }
@@ -1048,7 +1049,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .dark .dark\:bg-primary-dark {
   --tw-bg-opacity: 1;
-  background-color: rgb(13 36 56 / var(--tw-bg-opacity));
+  background-color: rgb(0 53 102 / var(--tw-bg-opacity));
 }
 .dark .dark\:bg-ternary-dark {
   --tw-bg-opacity: 1;
